--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
     <head>
-        <title>Home</title>
+        <title>Circles</title>
+        <link rel="stylesheet" href="css/pico.min.css">
     </head>
     <body>
         <h1>hi</h1>
