--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -23,10 +23,17 @@
     </head>
     <body>
         <main class="container">
-            <img
-                src="/assets/text.png"
-                style="width: 150px; margin-top: 10px"
-            />
+            <nav>
+                <ul>
+                    <li><a href="/"><img src="../assets/icon.png" style="width: 150px;"></a></li>
+                    <li><a href="/"><img src="../assets/text.png" style="width: 150px;"></a></li>
+                </ul>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#demo">Demo</a></li>
+                </ul>
+            </nav>
             <article style="margin-top: 30px">
                 <img
                     src="/assets/profile.png"
