--- a/public/form/index.html
+++ b/public/form/index.html
@@ -23,7 +23,7 @@
                     First name
                     <input
                         name="first_name"
-                        placeholder="First name"
+                        placeholder="ex. Jane"
                         autocomplete="given-name"
                     />
                     </label>
@@ -31,7 +31,7 @@
                         Last name
                         <input
                             name="last_name"
-                            placeholder="Last name"
+                            placeholder="ex. Doe"
                             autocomplete="last-name"
                         />
                         </label>
@@ -40,15 +40,32 @@
                         <input
                         type="email"
                         name="email"
-                        placeholder="Email"
+                        placeholder="janedoe123@gmail.com"
                         autocomplete="email"
                         />
                     </label>
+                    <label>
+                        Past/Present Schools
+                        <input
+                            name="schools"
+                            placeholder="Some High School"
+                            autocomplete="School Name"
+                        />
+                        </label>
+                    <label>
+                        Interests
+                        <input
+                            name="interests"
+                            placeholder="Ex. Games, Interests"
+                            autocomplete="interest"
+                        />
+                        </label>
                     </fieldset>
+                    
                 
                     <input
                     type="submit"
-                    value="Subscribe"
+                    value="Submit"
                     />
                 </form>
             </main>
