add template, myuser, etc

--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -74,7 +74,7 @@
                     "
                 >
                     <p id="bio" style="font-size: 26px">
-                        hey! Im JOhn DOE!!!!!!!!!1 pleasew connect with me
+                        Hey there! I'm John Doe, a high school student from WA.
                     </p>
                 </div>
                 <div
