--- a/public/index.html
+++ b/public/index.html
@@ -22,18 +22,23 @@
                         /></a>
                     </li>
                 </ul>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#demo">Demo</a></li>
+                <ul id="actions">
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
-
-            <div id="about"></div>
-
-            <div id="services"></div>
-
-            <div id="demo"></div>
         </main>
+        <script>
+            fetch("/isauthed")
+                .then((res) => res.json())
+                .then((data) => {
+                    if (data.isAuthed) {
+                        document.getElementById("actions").innerHTML = `
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/profile/me">Your Profile</a></li>
+                  <li><a href="/logout">Logout</a></li>
+                `;
+                    }
+                });
+        </script>
     </body>
 </html>
