--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -36,10 +36,8 @@
                         /></a>
                     </li>
                 </ul>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#demo">Demo</a></li>
+                <ul id="actions">
+                    <li><a href="/login">Login</a></li>
                 </ul>
             </nav>
             <article style="margin-top: 30px">
@@ -119,6 +117,18 @@
             if (!id) {
                 window.location.href = "/";
             }
+
+            fetch("/isauthed")
+                .then((res) => res.json())
+                .then((data) => {
+                    if (data.isAuthed) {
+                        document.getElementById("actions").innerHTML = `
+              <li><a href="/">Home</a></li>
+              <li><a href="/profile/me">Your Profile</a></li>
+              <li><a href="/logout">Logout</a></li>
+            `;
+                    }
+                });
 
             // fetch user data
             fetch("/profile/" + id)
