--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,143 @@
-<!doctype html>
-<html data-theme="dark">
-    <head>
-        <title>Circles</title>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
-        />
-    </head>
-    <body>
-        <main class="container">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/"
-                            ><img src="assets/icon.png" style="width: 150px"
-                        /></a>
-                    </li>
-                    <li>
-                        <a href="/"
-                            ><img src="assets/text.png" style="width: 150px"
-                        /></a>
-                    </li>
-                </ul>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#demo">Demo</a></li>
-                </ul>
-            </nav>
+<!DOCTYPE html>
+<html lang="en">
 
-            <div id="about"></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
+    <title>Circles - Find Your Perfect Match</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+            color: #333;
+        }
 
-            <div id="services"></div>
+        header {
+            background-color: #000000;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+        }
 
-            <div id="demo"></div>
-        </main>
-    </body>
+        header img {
+            width: 50px;
+            height: 50px;
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-size: 1.2em;
+            padding: 10px 20px;
+            border: 2px solid #fec20f;
+            border-radius: 5px;
+        }
+
+        nav a:hover {
+            background-color: #fec20f;
+            color: white;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            background: url('1.png') no-repeat center center/cover;
+            color: white;
+        }
+
+        .hero h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 40px;
+        }
+
+        .cta-button {
+            background-color: #fec20f;
+            color: white;
+            padding: 15px 30px;
+            text-transform: uppercase;
+            font-size: 1.2em;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .cta-button:hover {
+            background-color: #ffcf50;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        footer a {
+            color: #fec20f;
+            text-decoration: none;
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <img src="assets/icon.png" alt="Circles Logo" 
+            width="400" 
+            height ="400"/>
+        
+        <h1>Circles</h1>
+    </header>
+
+    <nav>
+        <a href="#about">About Us</a>
+        <a href="#features">Features</a>
+        <a href="#sign-up">Sign Up</a>
+        <a href="#login">Login</a>
+    </nav>
+
+    <section class="hero">
+        <h2>Connect with Like-minded People</h2>
+        <p>Join thousands of singles who have found love through Circles. Your match is just a click away.</p>
+        <button class="cta-button" onclick="window.location.href='#sign-up'">Join Now</button>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Circles. All rights reserved.</p>
+        <p><a href="#terms">Terms of Service</a> | <a href="#privacy">Privacy Policy</a></p>
+    </footer>
+
+</body>
+
 </html>
+
