--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"> -->
     <title>Circles - Find Your Perfect Match</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            background-color: #f4f4f9;
             color: #333;
         }
 
         header {
-            background-color: #000000;
+            background-color: #fec20f;
             color: white;
             padding: 20px 0;
             text-align: center;
@@ -58,20 +57,29 @@
             color: white;
         }
 
-        .hero {
-            text-align: center;
-            padding: 50px 20px;
-            background: url('1.png') no-repeat center center/cover;
+        /* Parallax Section */
+        .parallax {
+            background-image: url('assets/1.png');
+            height: 500px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             color: white;
+            text-align: center;
         }
 
-        .hero h2 {
-            font-size: 2.5em;
+        .parallax h2 {
+            font-size: 3em;
             margin-bottom: 20px;
         }
 
-        .hero p {
-            font-size: 1.2em;
+        .parallax p {
+            font-size: 1.5em;
             margin-bottom: 40px;
         }
 
@@ -88,6 +96,62 @@
 
         .cta-button:hover {
             background-color: #ffcf50;
+        }
+
+        section.content {
+            padding: 50px;
+            background-color: white;
+            text-align: center;
+        }
+
+        /* Feature Cards */
+        .features-section {
+            display: flex;
+            justify-content: space-around;
+            padding: 50px 0;
+        }
+
+        .feature-card {
+            background-color: #fff;
+            border: 2px solid #fec20f;
+            border-radius: 10px;
+            width: 30%;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .feature-card h3 {
+            font-size: 1.5em;
+            margin-bottom: 15px;
+        }
+
+        .feature-card p {
+            font-size: 1em;
+            margin-bottom: 20px;
+        }
+
+        /* Solution reveal on hover */
+        .feature-card .solution {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            background-color: #fec20f;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            transition: top 0.3s ease;
+        }
+
+        .feature-card:hover .solution {
+            top: 0;
         }
 
         footer {
@@ -112,11 +176,11 @@
 <body>
 
     <header>
-        <img src="assets/icon.png" alt="Circles Logo" 
-            width="400" 
-            height ="400"/>
-        
-        <h1>Circles</h1>
+        <img
+            src="assets/circlesbs.png"
+            alt="Circles Logo"
+            style="width: 220px"
+        />
     </header>
 
     <nav>
@@ -126,10 +190,53 @@
         <a href="#login">Login</a>
     </nav>
 
-    <section class="hero">
-        <h2>Connect with Like-minded People</h2>
-        <p>Join thousands of singles who have found love through Circles. Your match is just a click away.</p>
-        <button class="cta-button" onclick="window.location.href='#sign-up'">Join Now</button>
+    <!-- Parallax Section -->
+    <section class="parallax">
+        <div>
+            <h2>Connect with Like-minded People</h2>
+            <p>Join thousands of singles who have found love through Circles. Your match is just a click away.</p>
+            <button class="cta-button" onclick="window.location.href='#sign-up'">Join Now</button>
+        </div>
+    </section>
+
+    <!-- Content Section -->
+    <section class="content">
+        <h2>Why Circles?</h2>
+        <p>Our platform offers unique features to help you find your perfect match.</p>
+
+        <!-- Features Section -->
+        <div class="features-section">
+            <!-- Card 1: Shallow Level of Connection -->
+            <div class="feature-card">
+                <h3>Shallow Level of Connection</h3>
+                <p>Many users complain about the lack of meaningful connections on dating apps, as matching is often based on superficial criteria like looks and location.</p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles encourages deeper connections by using interest-based matching, meaningful conversation starters, and curated profiles to foster genuine relationships.</p>
+                </div>
+            </div>
+
+            <!-- Card 2: Boring Conversations -->
+            <div class="feature-card">
+                <h3>Boring Conversations</h3>
+                <p>The prevalence of pickup lines and generic messages has led to uninteresting and meaningless small talk on dating apps.</p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles promotes dynamic conversation starters and personality-based prompts that lead to more engaging and fun interactions.</p>
+                </div>
+            </div>
+
+            <!-- Card 3: Unreliability -->
+            <div class="feature-card">
+                <h3>Unreliability</h3>
+                <p>It’s tough for startups to keep up with trends without a big team or resources, making some platforms less reliable in delivering on promises.</p>
+                <div class="solution">
+                    <h3>Our Solution</h3>
+                    <p>Circles is constantly updated with new features and feedback-driven enhancements, ensuring a reliable and evolving platform.</p>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <footer>
@@ -140,4 +247,3 @@
 </body>
 
 </html>
-
