--- a/public/profile/me/index.html
+++ b/public/profile/me/index.html
@@ -27,12 +27,9 @@
                 <ul>
                     <li>
                         <a href="/"
-                            ><img src="/assets/icon.png" style="width: 150px"
-                        /></a>
-                    </li>
-                    <li>
-                        <a href="/"
-                            ><img src="/assets/text.png" style="width: 150px"
+                            ><img
+                                src="/assets/circlesbs.png"
+                                style="width: 200px"
                         /></a>
                     </li>
                 </ul>
