--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -39,6 +39,7 @@
             </nav>
             <article style="margin-top: 30px">
                 <img
+                    id="pfp"
                     src="/assets/profile.png"
                     style="border-radius: 9999px; width: 120px"
                 />
@@ -143,6 +144,8 @@
                         } else {
                             document.getElementById("bio").innerText = data.bio;
                         }
+
+                        document.getElementById("pfp").src = data.picture;
 
                         try {
                             if (
