fixed tiny thing

--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -158,6 +158,9 @@
                                     "You and " +
                                     data.name +
                                     " have nothing in common";
+                                document.getElementById(
+                                    "inCommonList",
+                                ).innerHTML = "";
                             } else {
                                 document.getElementById(
                                     "inCommonTitle",
